--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,18 @@ border-radius: 30px;
 .bg-jhonnie{
     background-color:  rgba(231, 207, 98, 0.349);
 }
+header nav ul li a{
+    margin: 20px    
+}
+.nav-item{
+    font-size: larger;
+}
+.nav-item:hover{
+    margin-left: 10px;
+    margin-right: 10px;
+    transition: 1s;
+    
+}
 @media (max-width: 768px) {
     .grid-container {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
