--- a/scss/layout/_etiquetas.scss
+++ b/scss/layout/_etiquetas.scss
@@ -15,15 +15,15 @@
             border-radius: 10px;
             text-align: center;
             padding: 50px;
-            padding: 50px;
             font-family: 'Times New Roman', Times, serif;
             margin-bottom: 50px;
         }
         .texto-red{
-            text-align: center;
-            font-style: oblique;
-            font-size: larger;
-            margin-top: 50px;
+            margin-bottom: 50px;
+             padding: 50px;
+             text-align: center;
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 20px;
         }
 
                 
