--- a/scss/utilities/_extend.scss
+++ b/scss/utilities/_extend.scss
@@ -2,19 +2,19 @@
     @extend .imagen-red;
 }
 .texto-black{
-    @extend .imagen-red;
+    @extend .texto-red;
 }
 .imagen-gold{
 @extend .imagen-red;
     }
     .texto-gold{
-        @extend .imagen-red;
+        @extend .texto-red;
     }
    
 .imagen-blue{
 @extend .imagen-red;
         }
         .texto-blue{
-            @extend .imagen-red;
+            @extend .texto-red;
         }
         
